[package]
name = "bedrock"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[workspace]
members = ["raknet", "nethernet"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["net", "sync", "time", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
bitflags = "2.10.0"
bytes = "1.11.0"
thiserror = "2.0.17"
rand = "0.9.2"
webrtc = "0.14.0"

[dependencies]
raknet = { path="./raknet" }
nethernet = { path="./nethernet" }
tokio = { workspace = true }
tracing = { workspace = true }
