[package]
name = "nethernet"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
webrtc = { workspace = true }
aes = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
