[package]
name = "raknet"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[dev-dependencies]
tracing-subscriber = { workspace = true }


[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[[example]]
name = "forwarder"
